--- a/package.json
+++ b/package.json
@@ -26,16 +26,39 @@
         "help": "nx help"
     },
     "private": true,
-    "dependencies": {},
+    "dependencies": {
+        "express": "4.17.1",
+        "tslib": "^2.0.0"
+    },
     "devDependencies": {
+        "@ionaru/eslint-config": "^3.0.0",
         "@nrwl/cli": "11.4.0",
+        "@nrwl/eslint-plugin-nx": "11.4.0",
+        "@nrwl/express": "^11.4.0",
+        "@nrwl/jest": "^11.4.0",
+        "@nrwl/linter": "11.4.0",
+        "@nrwl/node": "11.4.0",
         "@nrwl/nx-cloud": "latest",
         "@nrwl/tao": "11.4.0",
         "@nrwl/workspace": "11.4.0",
+        "@types/express": "^4.17.11",
+        "@types/jest": "^26.0.20",
         "@types/node": "^14.14.31",
+        "@typescript-eslint/eslint-plugin": "^4.15.2",
+        "@typescript-eslint/eslint-plugin-tslint": "^4.15.2",
+        "@typescript-eslint/parser": "^4.15.2",
         "dotenv": "^8.2.0",
+        "eslint": "^7.21.0",
+        "eslint-config-prettier": "^7.2.0",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-no-null": "^1.0.2",
+        "eslint-plugin-prefer-arrow": "^1.2.3",
+        "eslint-plugin-sonarjs": "^0.6.0",
+        "jest": "^26.6.3",
         "prettier": "2.2.1",
+        "ts-jest": "^26.5.2",
         "ts-node": "~9.1.1",
+        "tslint": "^6.1.3",
         "typescript": "^4.2.2"
     }
 }
