--- a/package.json
+++ b/package.json
@@ -27,7 +27,15 @@
     },
     "private": true,
     "dependencies": {
+        "@ionaru/micro-web-service": "^2.0.0",
+        "chalk": "^4.1.0",
+        "cors": "^2.8.5",
+        "debug": "^4.3.1",
         "express": "4.17.1",
+        "express-session": "^1.17.1",
+        "helmet": "^4.4.1",
+        "http-proxy": "^1.18.1",
+        "http-status-codes": "^2.1.4",
         "tslib": "^2.0.0"
     },
     "devDependencies": {
@@ -41,7 +49,11 @@
         "@nrwl/nx-cloud": "latest",
         "@nrwl/tao": "11.4.0",
         "@nrwl/workspace": "11.4.0",
+        "@types/cors": "^2.8.10",
+        "@types/debug": "^4.1.5",
         "@types/express": "^4.17.11",
+        "@types/express-session": "^1.17.3",
+        "@types/http-proxy": "^1.17.5",
         "@types/jest": "^26.0.20",
         "@types/node": "^14.14.31",
         "@typescript-eslint/eslint-plugin": "^4.15.2",
