Generate legacy app

--- a/nx.json
+++ b/nx.json
@@ -20,5 +20,5 @@
             }
         }
     },
-    "projects": {"api": {"tags": []}}
+    "projects": {"api": {"tags": []}, "legacy": {"tags": []}}
 }
