--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
             "extends": ["plugin:@nrwl/nx/typescript", "@ionaru"],
             "parserOptions": {"project": "./tsconfig.*?.json"},
             "rules": {
+                "no-null/no-null": "off",
                 "import/no-unresolved": [
                     2, {
                         "ignore": ["rangers-site"]
