--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -41,7 +41,7 @@ jobs:
               uses: docker/login-action@v1
               with:
                   registry: docker.saturnserver.org
-                  username: ${{ secrets.REGISRTY_USER }}
+                  username: ${{ secrets.REGISTRY_USER }}
                   password: ${{ secrets.REGISTRY_PASSWORD }}
 
             - name: Push images
