--- a/apps/legacy/package.json
+++ b/apps/legacy/package.json
@@ -4,8 +4,8 @@
         "start": "typeorm migration:run -c legacy && node main.js"
     },
     "dependencies": {
-        "mysql2": "^2.2.5",
-        "supports-color": "^8.1.1",
-        "uuid": "^8.3.2"
+        "mysql2": "2.2.5",
+        "supports-color": "8.1.1",
+        "uuid": "8.3.2"
     }
 }
