Implement API in service and workflow

--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
         "nx": "nx",
         "start": "nx serve",
         "build": "nx build",
-        "test": "nx run-many --all --target=test",
-        "lint": "nx workspace-lint && nx run-many --all --target=lint --parallel",
+        "test": "nx test",
+        "lint": "nx lint",
+        "test-all": "nx run-many --all --target=test",
+        "lint-all": "nx workspace-lint && nx run-many --all --target=lint --parallel",
         "e2e": "nx e2e",
         "affected:apps": "nx affected:apps",
         "affected:libs": "nx affected:libs",
@@ -94,7 +96,7 @@
         "@typescript-eslint/eslint-plugin-tslint": "4.16.1",
         "@typescript-eslint/parser": "4.16.1",
         "eslint": "7.21.0",
-        "eslint-config-prettier": "8.1.0",
+        "eslint-config-prettier": "7.2.0",
         "eslint-plugin-import": "2.22.1",
         "eslint-plugin-no-null": "1.0.2",
         "eslint-plugin-prefer-arrow": "1.2.3",
