--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -10,10 +10,8 @@ on:
             - main
 
 jobs:
-    test:
-
+    audit:
         runs-on: ubuntu-latest
-
         steps:
             - uses: actions/checkout@v2
 
@@ -24,29 +22,102 @@ jobs:
             - name: Audit
               run: npm audit
 
+    test:
+        needs: [audit]
+
+        strategy:
+            matrix:
+                app: [entities, interfaces, api, legacy]
+
+        runs-on: ubuntu-latest
+
+        steps:
+            - uses: actions/checkout@v2
+
+            - uses: actions/setup-node@v2
+              with:
+                  node-version: '14'
+
             - name: Install packages
               run: npm ci
 
             - name: Lint
-              run: npm run lint
+              run: npm run lint ${{matrix.app}}
 
-            - name: Run tests
-              run: npm test
+            - name: Test
+              run: npm test ${{matrix.app}}
+
+    build-image:
+        needs: [test]
+
+        strategy:
+            matrix:
+                app: [api, legacy]
+
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v2
+
+            - uses: actions/setup-node@v2
+              with:
+                  node-version: '14'
+
+            - name: Install packages
+              run: npm ci
 
             - name: Build
-              run: npm run nx build-image legacy -- --tag latest
+              run: npm run nx build-image ${{matrix.app}} -- --tag latest
+
+            - name: Save image
+              run: docker save ${{matrix.app}}:latest > ${{matrix.app}}-image.tar
+
+            - uses: actions/upload-artifact@v2
+              with:
+                  name: ${{matrix.app}}-image
+                  path: ${{matrix.app}}-image.tar
+                  retention-days: 1
+
+    push-image:
+        needs: [build-image]
+
+        if: github.event_name == 'push'
+
+        strategy:
+            matrix:
+                app: [api, legacy]
+
+        runs-on: ubuntu-latest
+        steps:
+            - name: Retrieve saved Docker image
+              uses: actions/download-artifact@v2
+              with:
+                  name: ${{matrix.app}}-image
+                  path: ${{matrix.app}}-image.tar
+
+            - name: Load image into docker
+              run: docker load < ${{matrix.app}}-image.tar
+
+            - name: Retag image for upload
+              run: docker tag ${{matrix.app}}:latest docker.saturnserver.org/rangers/${{matrix.app}}:latest
 
             - name: Login to Docker Registry
-              if: github.event_name == 'push'
               uses: docker/login-action@v1
               with:
                   registry: docker.saturnserver.org
                   username: ${{ secrets.REGISTRY_USER }}
                   password: ${{ secrets.REGISTRY_PASSWORD }}
 
-            - name: Push images
-              if: github.event_name == 'push'
-              run: npm run nx push-image legacy -- --tag latest
+            - name: Push image
+              run: docker push docker.saturnserver.org/rangers/${{matrix.app}}:latest
+
+    deploy:
+        needs: [push-image]
+
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/setup-node@v2
+              with:
+                  node-version: '14'
 
             - name: Deploy
               if: github.event_name == 'push'
