--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,18 @@ version: '3.8'
 
 services:
 
+    api:
+        # Main API gateway
+        image: docker.saturnserver.org/rangers/api:latest
+        environment:
+            - DEBUG
+            - RANGERS_API_PORT
+            - RANGERS_API_SESSION_KEY
+            - RANGERS_API_SESSION_SECRET
+            - RANGERS_API_SESSION_SECURE
+            - RANGERS_API_LEGACY_URL
+        restart: unless-stopped
+
     legacy:
         # The old monolithic version of this app.
         image: docker.saturnserver.org/rangers/legacy:latest
