--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,4 @@
-# Editor configuration, see http://editorconfig.org
+# Editor configuration, see https://editorconfig.org
 root = true
 
 [*]
@@ -8,6 +8,9 @@ insert_final_newline = true
 indent_size = 4
 indent_style = space
 trim_trailing_whitespace = true
+
+[*.yaml]
+indent_size = 2
 
 [*.md]
 max_line_length = off
