--- a/nx.json
+++ b/nx.json
@@ -1,9 +1,14 @@
 {
     "npmScope": "rangers-site",
-    "affected": {"defaultBase": "main"},
+    "affected": {
+        "defaultBase": "main"
+    },
     "implicitDependencies": {
         "workspace.json": "*",
-        "package.json": {"dependencies": "*", "devDependencies": "*"},
+        "package.json": {
+            "dependencies": "*",
+            "devDependencies": "*"
+        },
         "tsconfig.base.json": "*",
         "tslint.json": "*",
         ".eslintrc.json": "*",
@@ -20,10 +25,16 @@
             }
         }
     },
-    "projects": {
-        "api": {"tags": []},
-        "legacy": {"tags": []},
-        "entities": {"tags": []},
-        "interfaces": {"tags": []}
-    }
+    "targetDependencies": {
+        "build": [
+            {
+                "target": "build",
+                "projects": "dependencies"
+            }
+        ]
+    },
+    "cli": {
+        "defaultCollection": "@nrwl/express"
+    },
+    "defaultProject": "api"
 }
