--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,19 @@
 {
     "root": true,
-    "ignorePatterns": ["**/*"],
-    "plugins": ["@nrwl/nx"],
+    "ignorePatterns": [
+        "**/*"
+    ],
+    "plugins": [
+        "@nrwl/nx"
+    ],
     "overrides": [
         {
-            "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
+            "files": [
+                "*.ts",
+                "*.tsx",
+                "*.js",
+                "*.jsx"
+            ],
             "rules": {
                 "@nrwl/nx/enforce-module-boundaries": [
                     "error",
@@ -14,7 +23,9 @@
                         "depConstraints": [
                             {
                                 "sourceTag": "*",
-                                "onlyDependOnLibsWithTags": ["*"]
+                                "onlyDependOnLibsWithTags": [
+                                    "*"
+                                ]
                             }
                         ]
                     }
@@ -22,21 +33,34 @@
             }
         },
         {
-            "files": ["*.ts", "*.tsx"],
-            "extends": ["plugin:@nrwl/nx/typescript", "@ionaru"],
-            "parserOptions": {"project": "./tsconfig.*?.json"},
+            "files": [
+                "*.ts",
+                "*.tsx"
+            ],
+            "extends": [
+                "plugin:@nrwl/nx/typescript",
+                "@ionaru"
+            ],
             "rules": {
                 "no-null/no-null": "off",
                 "import/no-unresolved": [
-                    2, {
-                        "ignore": ["rangers-site"]
+                    2,
+                    {
+                        "ignore": [
+                            "rangers-site"
+                        ]
                     }
                 ]
             }
         },
         {
-            "files": ["*.js", "*.jsx"],
-            "extends": ["plugin:@nrwl/nx/javascript"],
+            "files": [
+                "*.js",
+                "*.jsx"
+            ],
+            "extends": [
+                "plugin:@nrwl/nx/javascript"
+            ],
             "rules": {}
         }
     ]
