--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
     },
     "private": true,
     "dependencies": {
-        "@ionaru/array-utils": "3.2.0",
+        "@ionaru/array-utils": "6.0.0",
         "@ionaru/micro-web-service": "2.0.0",
-        "@ionaru/random-string": "3.0.0",
+        "@ionaru/random-string": "4.0.0",
         "@ionaru/typeorm-utils": "1.2.1",
         "axios": "0.21.1",
         "bootstrap": "4.6.0",
@@ -44,7 +44,7 @@
         "cron": "1.8.2",
         "debug": "4.3.1",
         "discord.js": "12.5.1",
-        "dotenv": "8.2.0",
+        "dotenv": "10.0.0",
         "express": "4.17.1",
         "express-fileupload": "1.2.1",
         "express-session": "1.17.1",
@@ -69,16 +69,16 @@
         "uuid": "8.3.2"
     },
     "devDependencies": {
-        "@ionaru/eslint-config": "3.0.0",
-        "@nrwl/cli": "11.4.0",
-        "@nrwl/eslint-plugin-nx": "11.4.0",
-        "@nrwl/express": "11.4.0",
-        "@nrwl/jest": "11.4.0",
-        "@nrwl/linter": "11.4.0",
-        "@nrwl/node": "11.4.0",
-        "@nrwl/nx-cloud": "latest",
-        "@nrwl/tao": "11.4.0",
-        "@nrwl/workspace": "11.4.0",
+        "@ionaru/eslint-config": "4.0.0",
+        "@nrwl/cli": "13.1.4",
+        "@nrwl/eslint-plugin-nx": "13.1.4",
+        "@nrwl/express": "13.1.4",
+        "@nrwl/jest": "13.1.4",
+        "@nrwl/linter": "13.1.4",
+        "@nrwl/node": "13.1.4",
+        "@nrwl/nx-cloud": "12.5.2",
+        "@nrwl/tao": "13.1.4",
+        "@nrwl/workspace": "13.1.4",
         "@types/cors": "2.8.10",
         "@types/cron": "1.7.2",
         "@types/debug": "4.1.5",
@@ -87,25 +87,19 @@
         "@types/express-session": "1.17.3",
         "@types/hbs": "4.0.1",
         "@types/http-proxy": "1.17.5",
-        "@types/jest": "26.0.20",
-        "@types/node": "14.14.32",
+        "@types/jest": "27.0.2",
+        "@types/node": "14.14.33",
         "@types/passport": "1.0.6",
         "@types/passport-discord": "0.1.3",
         "@types/uuid": "8.3.0",
-        "@typescript-eslint/eslint-plugin": "4.16.1",
-        "@typescript-eslint/eslint-plugin-tslint": "4.16.1",
-        "@typescript-eslint/parser": "4.16.1",
-        "eslint": "7.21.0",
-        "eslint-config-prettier": "7.2.0",
-        "eslint-plugin-import": "2.22.1",
-        "eslint-plugin-no-null": "1.0.2",
-        "eslint-plugin-prefer-arrow": "1.2.3",
-        "eslint-plugin-sonarjs": "0.6.0",
-        "jest": "26.6.3",
-        "prettier": "2.2.1",
-        "ts-jest": "26.5.3",
+        "@typescript-eslint/eslint-plugin": "4.33.0",
+        "@typescript-eslint/parser": "4.33.0",
+        "eslint": "7.32.0",
+        "eslint-config-prettier": "8.1.0",
+        "jest": "27.2.3",
+        "prettier": "2.3.1",
+        "ts-jest": "27.0.5",
         "ts-node": "9.1.1",
-        "tslint": "6.1.3",
-        "typescript": "4.2.3"
+        "typescript": "4.3.5"
     }
 }
