Fix linting errors

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,6 +43,7 @@
             ],
             "rules": {
                 "no-null/no-null": "off",
+                "import/extensions": "off",
                 "import/no-unresolved": [
                     2,
                     {
