--- a/package.json
+++ b/package.json
@@ -36,70 +36,75 @@
         "@ionaru/micro-web-service": "2.0.0",
         "@ionaru/random-string": "4.0.0",
         "@ionaru/typeorm-utils": "1.2.1",
-        "axios": "0.21.1",
+        "axios": "^0.25.0",
         "bootstrap": "4.6.0",
         "chalk": "4.1.0",
         "connect-typeorm": "1.1.4",
         "cors": "2.8.5",
         "cron": "1.8.2",
-        "debug": "4.3.1",
+        "debug": "^4.3.3",
         "discord.js": "12.5.1",
         "dotenv": "10.0.0",
-        "express": "4.17.1",
-        "express-fileupload": "1.2.1",
-        "express-session": "1.17.1",
+        "express": "4.17.2",
+        "express-fileupload": "^1.3.1",
+        "express-session": "^1.17.2",
         "guessdate-en": "1.0.2",
-        "hbs": "4.1.1",
+        "hbs": "^4.2.0",
         "helmet": "4.4.1",
         "http-proxy": "1.18.1",
         "http-proxy-middleware": "1.0.6",
-        "http-status-codes": "2.1.4",
+        "http-status-codes": "^2.2.0",
         "moment": "2.29.1",
-        "moment-timezone": "0.5.33",
-        "mysql2": "2.2.5",
-        "node-sass": "5.0.0",
-        "passport": "0.4.1",
+        "moment-timezone": "^0.5.34",
+        "mysql2": "^2.3.3",
+        "passport": "^0.5.2",
         "passport-discord": "0.1.4",
-        "passport-oauth2": "1.5.0",
+        "passport-oauth2": "^1.6.1",
         "reflect-metadata": "0.1.13",
         "supports-color": "8.1.1",
-        "ts3-nodejs-library": "3.2.0",
-        "tslib": "2.1.0",
-        "typeorm": "0.2.31",
+        "ts3-nodejs-library": "^3.4.1",
+        "tslib": "^2.3.1",
+        "typeorm": "^0.2.41",
         "uuid": "8.3.2"
     },
     "devDependencies": {
-        "@ionaru/eslint-config": "4.0.0",
-        "@nrwl/cli": "13.1.4",
-        "@nrwl/eslint-plugin-nx": "13.1.4",
-        "@nrwl/express": "13.1.4",
-        "@nrwl/jest": "13.1.4",
-        "@nrwl/linter": "13.1.4",
-        "@nrwl/node": "13.1.4",
-        "@nrwl/nx-cloud": "12.5.2",
-        "@nrwl/tao": "13.1.4",
-        "@nrwl/workspace": "13.1.4",
-        "@types/cors": "2.8.10",
-        "@types/cron": "1.7.2",
-        "@types/debug": "4.1.5",
-        "@types/express": "4.17.11",
-        "@types/express-fileupload": "1.1.6",
-        "@types/express-session": "1.17.3",
+        "@ionaru/eslint-config": "^6.1.0",
+        "@nrwl/cli": "13.7.3",
+        "@nrwl/eslint-plugin-nx": "13.7.3",
+        "@nrwl/express": "13.7.3",
+        "@nrwl/jest": "13.7.3",
+        "@nrwl/linter": "13.7.3",
+        "@nrwl/node": "13.7.3",
+        "@nrwl/nx-cloud": "13.1.2",
+        "@nrwl/tao": "13.7.3",
+        "@nrwl/workspace": "13.7.3",
+        "@types/cors": "^2.8.12",
+        "@types/cron": "^1.7.3",
+        "@types/debug": "^4.1.7",
+        "@types/express": "4.17.13",
+        "@types/express-fileupload": "^1.2.2",
+        "@types/express-session": "^1.17.4",
         "@types/hbs": "4.0.1",
-        "@types/http-proxy": "1.17.5",
-        "@types/jest": "27.0.2",
-        "@types/node": "14.14.33",
-        "@types/passport": "1.0.6",
-        "@types/passport-discord": "0.1.3",
-        "@types/uuid": "8.3.0",
-        "@typescript-eslint/eslint-plugin": "4.33.0",
-        "@typescript-eslint/parser": "4.33.0",
-        "eslint": "7.32.0",
-        "eslint-config-prettier": "8.1.0",
-        "jest": "27.2.3",
-        "prettier": "2.3.1",
-        "ts-jest": "27.0.5",
-        "ts-node": "9.1.1",
+        "@types/http-proxy": "^1.17.8",
+        "@types/jest": "^27.4.0",
+        "@types/node": "^16.11.22",
+        "@types/passport": "^1.0.7",
+        "@types/passport-discord": "^0.1.5",
+        "@types/uuid": "^8.3.4",
+        "@typescript-eslint/eslint-plugin": "^5.10.2",
+        "@typescript-eslint/parser": "5.10.2",
+        "eslint": "^8.8.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-import": "^2.25.4",
+        "eslint-plugin-jest": "^26.0.0",
+        "eslint-plugin-no-null": "^1.0.2",
+        "eslint-plugin-prefer-arrow": "^1.2.3",
+        "eslint-plugin-sonarjs": "^0.11.0",
+        "eslint-plugin-unicorn": "^40.1.0",
+        "jest": "^27.5.0",
+        "prettier": "2.5.1",
+        "sass": "^1.49.7",
+        "ts-jest": "^27.1.3",
         "typescript": "4.3.5"
     }
 }
