--- a/package.json
+++ b/package.json
@@ -33,26 +33,26 @@
     "private": true,
     "dependencies": {
         "@ionaru/array-utils": "6.0.0",
-        "@ionaru/micro-web-service": "2.0.0",
+        "@ionaru/micro-web-service": "^3.0.2",
         "@ionaru/random-string": "4.0.0",
-        "@ionaru/typeorm-utils": "1.2.1",
+        "@ionaru/typeorm-utils": "^2.0.0",
         "axios": "^0.25.0",
         "bootstrap": "4.6.0",
-        "chalk": "4.1.0",
+        "chalk": "^5.0.0",
         "connect-typeorm": "1.1.4",
         "cors": "2.8.5",
         "cron": "1.8.2",
         "debug": "^4.3.3",
         "discord.js": "12.5.1",
-        "dotenv": "10.0.0",
+        "dotenv": "^16.0.0",
         "express": "4.17.2",
         "express-fileupload": "^1.3.1",
         "express-session": "^1.17.2",
         "guessdate-en": "1.0.2",
         "hbs": "^4.2.0",
-        "helmet": "4.4.1",
+        "helmet": "^5.0.2",
         "http-proxy": "1.18.1",
-        "http-proxy-middleware": "1.0.6",
+        "http-proxy-middleware": "^2.0.2",
         "http-status-codes": "^2.2.0",
         "moment": "2.29.1",
         "moment-timezone": "^0.5.34",
@@ -61,7 +61,7 @@
         "passport-discord": "0.1.4",
         "passport-oauth2": "^1.6.1",
         "reflect-metadata": "0.1.13",
-        "supports-color": "8.1.1",
+        "supports-color": "^9.2.1",
         "ts3-nodejs-library": "^3.4.1",
         "tslib": "^2.3.1",
         "typeorm": "^0.2.41",
@@ -105,6 +105,6 @@
         "prettier": "2.5.1",
         "sass": "^1.49.7",
         "ts-jest": "^27.1.3",
-        "typescript": "4.3.5"
+        "typescript": "^4.5.5"
     }
 }
