--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
         "@ionaru/micro-web-service": "^3.0.2",
         "@ionaru/random-string": "4.0.0",
         "@ionaru/typeorm-utils": "^2.0.0",
-        "axios": "^0.25.0",
+        "axios": "^0.26.0",
         "bootstrap": "4.6.0",
         "chalk": "^5.0.0",
         "connect-typeorm": "1.1.4",
@@ -68,16 +68,16 @@
         "uuid": "8.3.2"
     },
     "devDependencies": {
-        "@ionaru/eslint-config": "^6.1.0",
-        "@nrwl/cli": "13.7.3",
-        "@nrwl/eslint-plugin-nx": "13.7.3",
-        "@nrwl/express": "13.7.3",
-        "@nrwl/jest": "13.7.3",
-        "@nrwl/linter": "13.7.3",
-        "@nrwl/node": "13.7.3",
-        "@nrwl/nx-cloud": "13.1.2",
-        "@nrwl/tao": "13.7.3",
-        "@nrwl/workspace": "13.7.3",
+        "@ionaru/eslint-config": "^6.2.0",
+        "@nrwl/cli": "13.8.3",
+        "@nrwl/eslint-plugin-nx": "13.8.3",
+        "@nrwl/express": "13.8.3",
+        "@nrwl/jest": "13.8.3",
+        "@nrwl/linter": "13.8.3",
+        "@nrwl/node": "13.8.3",
+        "@nrwl/nx-cloud": "13.1.5",
+        "@nrwl/tao": "13.8.3",
+        "@nrwl/workspace": "13.8.3",
         "@types/cors": "^2.8.12",
         "@types/cron": "^1.7.3",
         "@types/debug": "^4.1.7",
@@ -92,15 +92,15 @@
         "@types/passport-discord": "^0.1.5",
         "@types/uuid": "^8.3.4",
         "@typescript-eslint/eslint-plugin": "^5.10.2",
-        "@typescript-eslint/parser": "5.10.2",
+        "@typescript-eslint/parser": "~5.10.2",
         "eslint": "^8.8.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-import": "^2.25.4",
         "eslint-plugin-jest": "^26.0.0",
         "eslint-plugin-no-null": "^1.0.2",
         "eslint-plugin-prefer-arrow": "^1.2.3",
-        "eslint-plugin-sonarjs": "^0.11.0",
-        "eslint-plugin-unicorn": "^40.1.0",
+        "eslint-plugin-sonarjs": "^0.12.0",
+        "eslint-plugin-unicorn": "^41.0.0",
         "jest": "^27.5.0",
         "prettier": "2.5.1",
         "sass": "^1.49.7",
