--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     },
     "private": true,
     "dependencies": {
-        "@ionaru/array-utils": "6.0.0",
+        "@ionaru/array-utils": "^6.3.0",
         "@ionaru/micro-web-service": "^3.0.2",
         "@ionaru/random-string": "4.0.0",
         "@ionaru/typeorm-utils": "^2.0.0",
