--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
         "passport-discord": "0.1.4",
         "passport-oauth2": "^1.6.1",
         "reflect-metadata": "0.1.13",
+        "slash-create": "^5.2.1",
         "supports-color": "^9.2.1",
         "ts3-nodejs-library": "^3.4.1",
         "tslib": "^2.3.1",
