--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
         "cors": "2.8.5",
         "cron": "1.8.2",
         "debug": "^4.3.3",
-        "discord.js": "12.5.1",
+        "discord.js": "^13.6.0",
         "dotenv": "^16.0.0",
         "express": "4.17.2",
         "express-fileupload": "^1.3.1",
@@ -65,7 +65,7 @@
         "supports-color": "^9.2.1",
         "ts3-nodejs-library": "^3.4.1",
         "tslib": "^2.3.1",
-        "typeorm": "^0.2.41",
+        "typeorm": "^0.2.44",
         "uuid": "8.3.2"
     },
     "devDependencies": {
