--- a/package.json
+++ b/package.json
@@ -71,14 +71,13 @@
     "devDependencies": {
         "@ionaru/eslint-config": "^6.2.0",
         "@nrwl/cli": "13.8.8",
-        "@nrwl/eslint-plugin-nx": "13.8.8",
-        "@nrwl/express": "13.8.8",
-        "@nrwl/jest": "13.8.8",
-        "@nrwl/linter": "13.8.8",
-        "@nrwl/node": "13.8.8",
+        "@nrwl/eslint-plugin-nx": "13.9.4",
+        "@nrwl/express": "13.9.4",
+        "@nrwl/jest": "13.9.4",
+        "@nrwl/linter": "13.9.4",
+        "@nrwl/node": "13.9.4",
         "@nrwl/nx-cloud": "13.1.6",
-        "@nrwl/tao": "13.8.8",
-        "@nrwl/workspace": "13.8.8",
+        "@nrwl/workspace": "13.9.4",
         "@types/cors": "^2.8.12",
         "@types/cron": "^1.7.3",
         "@types/debug": "^4.1.7",
@@ -106,6 +105,7 @@
         "prettier": "2.5.1",
         "sass": "^1.49.7",
         "ts-jest": "^27.1.3",
-        "typescript": "^4.5.5"
+        "typescript": "^4.5.5",
+        "nx": "13.9.4"
     }
 }
