--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "rangers-site",
     "version": "0.0.0",
-    "license": "MIT",
+    "license": "UNLICENSED",
     "scripts": {
         "nx": "nx",
         "start": "nx serve",
@@ -33,11 +33,12 @@
     "private": true,
     "dependencies": {
         "@ionaru/array-utils": "^6.3.0",
-        "@ionaru/micro-web-service": "^4.2.0",
+        "@ionaru/micro-web-service": "^4.2.1-6.0",
         "@ionaru/random-string": "4.0.0",
         "@ionaru/typeorm-utils": "^2.0.0",
         "ajv": "^8.10.0",
         "ajv-errors": "^3.0.0",
+        "ajv-formats": "^2.1.1",
         "axios": "^0.26.0",
         "bootstrap": "4.6.0",
         "chalk": "^5.0.0",
@@ -104,10 +105,10 @@
         "eslint-plugin-sonarjs": "^0.12.0",
         "eslint-plugin-unicorn": "^41.0.0",
         "jest": "^27.5.0",
+        "nx": "13.9.4",
         "prettier": "2.5.1",
         "sass": "^1.49.7",
         "ts-jest": "^27.1.3",
-        "typescript": "^4.5.5",
-        "nx": "13.9.4"
+        "typescript": "^4.5.5"
     }
 }
