--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
         "bootstrap": "4.6.0",
         "chalk": "^5.0.0",
         "connect-typeorm": "1.1.4",
-        "cors": "2.8.5",
-        "cron": "1.8.2",
+        "cors": "^2.8.5",
+        "cron": "^1.8.2",
         "debug": "^4.3.3",
         "discord.js": "^13.6.0",
         "dotenv": "^16.0.0",
@@ -54,10 +54,10 @@
         "guessdate-en": "1.0.2",
         "hbs": "^4.2.0",
         "helmet": "^5.0.2",
-        "http-proxy": "1.18.1",
+        "http-proxy": "^1.18.1",
         "http-proxy-middleware": "^2.0.2",
         "http-status-codes": "^2.2.0",
-        "moment": "2.29.1",
+        "moment": "^2.29.1",
         "moment-timezone": "^0.5.34",
         "mysql2": "^2.3.3",
         "passport": "^0.5.2",
@@ -69,18 +69,18 @@
         "ts3-nodejs-library": "^3.4.1",
         "tslib": "^2.3.1",
         "typeorm": "^0.2.44",
-        "uuid": "8.3.2"
+        "uuid": "^8.3.2"
     },
     "devDependencies": {
         "@ionaru/eslint-config": "^6.2.0",
         "@nrwl/cli": "13.8.8",
-        "@nrwl/eslint-plugin-nx": "13.9.5",
-        "@nrwl/express": "13.9.5",
-        "@nrwl/jest": "13.9.5",
-        "@nrwl/linter": "13.9.5",
-        "@nrwl/node": "13.9.5",
-        "@nrwl/nx-cloud": "13.1.6",
-        "@nrwl/workspace": "13.9.5",
+        "@nrwl/eslint-plugin-nx": "13.10.1",
+        "@nrwl/express": "13.10.1",
+        "@nrwl/jest": "13.10.1",
+        "@nrwl/linter": "13.10.1",
+        "@nrwl/node": "13.10.1",
+        "@nrwl/nx-cloud": "13.2.2",
+        "@nrwl/workspace": "13.10.1",
         "@types/cors": "^2.8.12",
         "@types/cron": "^1.7.3",
         "@types/debug": "^4.1.7",
@@ -94,9 +94,9 @@
         "@types/passport": "^1.0.7",
         "@types/passport-discord": "^0.1.5",
         "@types/uuid": "^8.3.4",
-        "@typescript-eslint/eslint-plugin": "^5.10.2",
-        "@typescript-eslint/parser": "~5.10.2",
-        "eslint": "^8.8.0",
+        "@typescript-eslint/eslint-plugin": "5.18.0",
+        "@typescript-eslint/parser": "5.18.0",
+        "eslint": "8.12.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-import": "^2.25.4",
         "eslint-plugin-jest": "^26.0.0",
@@ -105,7 +105,7 @@
         "eslint-plugin-sonarjs": "^0.12.0",
         "eslint-plugin-unicorn": "^41.0.0",
         "jest": "^27.5.0",
-        "nx": "13.9.5",
+        "nx": "13.10.1",
         "prettier": "2.5.1",
         "sass": "^1.49.7",
         "ts-jest": "^27.1.3",
