--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -20,7 +20,7 @@ jobs:
                   node-version: '16'
 
             - name: Audit
-              run: npm audit
+              run: npm audit --production
 
     test:
         needs: [audit]
