--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "private": true,
     "dependencies": {
         "@ionaru/array-utils": "^6.3.0",
-        "@ionaru/micro-web-service": "^4.2.1-6.0",
+        "@ionaru/micro-web-service": "^5.0.0",
         "@ionaru/random-string": "4.0.0",
         "@ionaru/typeorm-utils": "^2.0.0",
         "ajv": "^8.10.0",
@@ -102,8 +102,8 @@
         "eslint-plugin-jest": "^26.0.0",
         "eslint-plugin-no-null": "^1.0.2",
         "eslint-plugin-prefer-arrow": "^1.2.3",
-        "eslint-plugin-sonarjs": "^0.12.0",
-        "eslint-plugin-unicorn": "^41.0.0",
+        "eslint-plugin-sonarjs": "^0.13.0",
+        "eslint-plugin-unicorn": "^42.0.0",
         "jest": "^27.5.0",
         "nx": "13.10.2",
         "prettier": "2.5.1",
