--- a/package.json
+++ b/package.json
@@ -32,14 +32,14 @@
     },
     "private": true,
     "dependencies": {
-        "@ionaru/array-utils": "^6.3.0",
+        "@ionaru/array-utils": "^7.0.0",
         "@ionaru/micro-web-service": "^5.0.0",
         "@ionaru/random-string": "4.0.0",
         "@ionaru/typeorm-utils": "^2.0.0",
         "ajv": "^8.10.0",
         "ajv-errors": "^3.0.0",
         "ajv-formats": "^2.1.1",
-        "axios": "^0.26.0",
+        "axios": "^0.27.2",
         "bootstrap": "4.6.0",
         "chalk": "^5.0.0",
         "connect-typeorm": "1.1.4",
@@ -51,7 +51,7 @@
         "express": "4.17.2",
         "express-fileupload": "^1.3.1",
         "express-session": "^1.17.2",
-        "guessdate-en": "1.0.2",
+        "guessdate-en": "^1.0.3",
         "hbs": "^4.2.0",
         "helmet": "^5.0.2",
         "http-proxy": "^1.18.1",
@@ -73,14 +73,14 @@
     },
     "devDependencies": {
         "@ionaru/eslint-config": "^6.2.0",
-        "@nrwl/cli": "13.10.2",
-        "@nrwl/eslint-plugin-nx": "13.10.2",
-        "@nrwl/express": "13.10.2",
-        "@nrwl/jest": "13.10.2",
-        "@nrwl/linter": "13.10.2",
-        "@nrwl/node": "13.10.2",
-        "@nrwl/nx-cloud": "13.2.2",
-        "@nrwl/workspace": "13.10.2",
+        "@nrwl/cli": "14.0.3",
+        "@nrwl/eslint-plugin-nx": "14.0.3",
+        "@nrwl/express": "14.0.3",
+        "@nrwl/jest": "14.0.3",
+        "@nrwl/linter": "14.0.3",
+        "@nrwl/node": "14.0.3",
+        "@nrwl/nx-cloud": "14.0.0",
+        "@nrwl/workspace": "14.0.3",
         "@types/cors": "^2.8.12",
         "@types/cron": "^1.7.3",
         "@types/debug": "^4.1.7",
@@ -89,7 +89,7 @@
         "@types/express-session": "^1.17.4",
         "@types/hbs": "4.0.1",
         "@types/http-proxy": "^1.17.8",
-        "@types/jest": "^27.4.0",
+        "@types/jest": "27.4.1",
         "@types/node": "^16.11.22",
         "@types/passport": "^1.0.7",
         "@types/passport-discord": "^0.1.5",
@@ -104,11 +104,11 @@
         "eslint-plugin-prefer-arrow": "^1.2.3",
         "eslint-plugin-sonarjs": "^0.13.0",
         "eslint-plugin-unicorn": "^42.0.0",
-        "jest": "^27.5.0",
-        "nx": "13.10.2",
+        "jest": "27.5.1",
+        "nx": "14.0.3",
         "prettier": "2.5.1",
         "sass": "^1.49.7",
-        "ts-jest": "^27.1.3",
+        "ts-jest": "27.1.4",
         "typescript": "^4.5.5"
     }
 }
