--- a/package.json
+++ b/package.json
@@ -73,14 +73,14 @@
     },
     "devDependencies": {
         "@ionaru/eslint-config": "^7.0.1",
-        "@nrwl/cli": "14.1.5",
-        "@nrwl/eslint-plugin-nx": "14.1.5",
-        "@nrwl/express": "14.1.5",
-        "@nrwl/jest": "14.1.5",
-        "@nrwl/linter": "14.1.5",
-        "@nrwl/node": "14.1.5",
-        "@nrwl/nx-cloud": "14.0.3",
-        "@nrwl/workspace": "14.1.5",
+        "@nrwl/cli": "14.2.4",
+        "@nrwl/eslint-plugin-nx": "14.2.4",
+        "@nrwl/express": "14.2.4",
+        "@nrwl/jest": "14.2.4",
+        "@nrwl/linter": "14.2.4",
+        "@nrwl/node": "14.2.4",
+        "@nrwl/nx-cloud": "14.1.0",
+        "@nrwl/workspace": "14.2.4",
         "@types/cors": "^2.8.12",
         "@types/cron": "^2.0.0",
         "@types/debug": "^4.1.7",
@@ -94,9 +94,9 @@
         "@types/passport": "^1.0.7",
         "@types/passport-discord": "^0.1.5",
         "@types/uuid": "^8.3.4",
-        "@typescript-eslint/eslint-plugin": "5.18.0",
-        "@typescript-eslint/parser": "5.18.0",
-        "eslint": "8.12.0",
+        "@typescript-eslint/eslint-plugin": "5.24.0",
+        "@typescript-eslint/parser": "5.24.0",
+        "eslint": "8.15.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-import": "^2.25.4",
         "eslint-plugin-jest": "^26.0.0",
@@ -105,10 +105,10 @@
         "eslint-plugin-sonarjs": "^0.13.0",
         "eslint-plugin-unicorn": "^42.0.0",
         "jest": "27.5.1",
-        "nx": "14.1.5",
-        "prettier": "2.5.1",
+        "nx": "14.2.4",
+        "prettier": "2.6.2",
         "sass": "^1.49.7",
         "ts-jest": "27.1.4",
-        "typescript": "^4.5.5"
+        "typescript": "4.7.3"
     }
 }
