--- a/package.json
+++ b/package.json
@@ -73,14 +73,14 @@
     },
     "devDependencies": {
         "@ionaru/eslint-config": "^7.0.1",
-        "@nrwl/cli": "14.2.4",
-        "@nrwl/eslint-plugin-nx": "14.2.4",
-        "@nrwl/express": "14.2.4",
-        "@nrwl/jest": "14.2.4",
-        "@nrwl/linter": "14.2.4",
-        "@nrwl/node": "14.2.4",
-        "@nrwl/nx-cloud": "14.1.0",
-        "@nrwl/workspace": "14.2.4",
+        "@nrwl/cli": "14.4.2",
+        "@nrwl/eslint-plugin-nx": "14.4.2",
+        "@nrwl/express": "14.4.2",
+        "@nrwl/jest": "14.4.2",
+        "@nrwl/linter": "14.4.2",
+        "@nrwl/node": "14.4.2",
+        "@nrwl/nx-cloud": "14.2.0",
+        "@nrwl/workspace": "14.4.2",
         "@types/cors": "^2.8.12",
         "@types/cron": "^2.0.0",
         "@types/debug": "^4.1.7",
@@ -90,12 +90,12 @@
         "@types/hbs": "4.0.1",
         "@types/http-proxy": "^1.17.8",
         "@types/jest": "27.4.1",
-        "@types/node": "^16.11.22",
+        "@types/node": "18.0.0",
         "@types/passport": "^1.0.7",
         "@types/passport-discord": "^0.1.5",
         "@types/uuid": "^8.3.4",
-        "@typescript-eslint/eslint-plugin": "5.24.0",
-        "@typescript-eslint/parser": "5.24.0",
+        "@typescript-eslint/eslint-plugin": "5.29.0",
+        "@typescript-eslint/parser": "5.29.0",
         "eslint": "8.15.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-import": "^2.25.4",
@@ -105,7 +105,7 @@
         "eslint-plugin-sonarjs": "^0.13.0",
         "eslint-plugin-unicorn": "^42.0.0",
         "jest": "27.5.1",
-        "nx": "14.2.4",
+        "nx": "14.4.2",
         "prettier": "2.6.2",
         "sass": "^1.49.7",
         "ts-jest": "27.1.4",
