--- a/apps/api/.eslintrc.json
+++ b/apps/api/.eslintrc.json
@@ -9,6 +9,9 @@
         },
         {
             "files": ["*.ts", "*.tsx"],
+            "parserOptions": {
+                "project": ["apps/api/tsconfig.*?.json"]
+            },
             "rules": {}
         },
         {
