--- a/apps/legacy/tsconfig.app.json
+++ b/apps/legacy/tsconfig.app.json
@@ -3,17 +3,8 @@
     "compilerOptions": {
         "outDir": "../../dist/out-tsc",
         "module": "CommonJS",
-        "types": [
-            "node",
-            "express"
-        ]
+        "types": ["node", "express"]
     },
-    "exclude": [
-        "**/*.spec.ts",
-        "**/*.test.ts",
-        "jest.config.ts"
-    ],
-    "include": [
-        "**/*.ts"
-    ]
+    "exclude": ["**/*.spec.ts", "**/*.test.ts", "jest.config.ts"],
+    "include": ["**/*.ts"]
 }
