--- a/libs/interfaces/.eslintrc.json
+++ b/libs/interfaces/.eslintrc.json
@@ -9,6 +9,9 @@
         },
         {
             "files": ["*.ts", "*.tsx"],
+            "parserOptions": {
+                "project": ["libs/interfaces/tsconfig.*?.json"]
+            },
             "rules": {}
         },
         {
