--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "test": "nx test",
         "lint": "nx lint",
         "test-all": "nx run-many --all --target=test",
-        "lint-all": "nx workspace-lint && nx run-many --all --target=lint --parallel",
+        "lint-all": "nx run-many --all --target=lint --parallel",
         "e2e": "nx e2e",
         "affected:apps": "nx affected:apps",
         "affected:libs": "nx affected:libs",
@@ -48,7 +48,7 @@
         "debug": "^4.3.3",
         "discord.js": "^13.7.0",
         "dotenv": "^16.0.0",
-        "express": "4.17.2",
+        "express": "4.18.1",
         "express-fileupload": "^1.3.1",
         "express-session": "^1.17.2",
         "guessdate-en": "^1.0.3",
@@ -72,15 +72,15 @@
         "uuid": "^8.3.2"
     },
     "devDependencies": {
-        "@ionaru/eslint-config": "^7.0.1",
-        "@nrwl/cli": "14.4.2",
-        "@nrwl/eslint-plugin-nx": "14.4.2",
-        "@nrwl/express": "14.4.2",
-        "@nrwl/jest": "14.4.2",
-        "@nrwl/linter": "14.4.2",
-        "@nrwl/node": "14.4.2",
-        "@nrwl/nx-cloud": "14.2.0",
-        "@nrwl/workspace": "14.4.2",
+        "@ionaru/eslint-config": "^9.1.1",
+        "@nrwl/cli": "15.8.6",
+        "@nrwl/eslint-plugin-nx": "15.8.6",
+        "@nrwl/express": "15.8.6",
+        "@nrwl/jest": "15.8.6",
+        "@nrwl/linter": "15.8.6",
+        "@nrwl/node": "15.8.6",
+        "@nrwl/nx-cloud": "15.2.1",
+        "@nrwl/workspace": "15.8.6",
         "@types/cors": "^2.8.12",
         "@types/cron": "^2.0.0",
         "@types/debug": "^4.1.7",
@@ -89,26 +89,27 @@
         "@types/express-session": "^1.17.4",
         "@types/hbs": "4.0.1",
         "@types/http-proxy": "^1.17.8",
-        "@types/jest": "27.4.1",
-        "@types/node": "18.0.0",
+        "@types/jest": "29.4.0",
+        "@types/node": "18.7.1",
         "@types/passport": "^1.0.7",
         "@types/passport-discord": "^0.1.5",
         "@types/uuid": "^8.3.4",
-        "@typescript-eslint/eslint-plugin": "5.29.0",
-        "@typescript-eslint/parser": "5.29.0",
-        "eslint": "8.15.0",
+        "@typescript-eslint/eslint-plugin": "^5.54.1",
+        "@typescript-eslint/parser": "^5.54.1",
+        "eslint": "^8.36.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-import": "^2.25.4",
-        "eslint-plugin-jest": "^26.0.0",
+        "eslint-plugin-jest": "^27.2.1",
         "eslint-plugin-no-null": "^1.0.2",
         "eslint-plugin-prefer-arrow": "^1.2.3",
-        "eslint-plugin-sonarjs": "^0.13.0",
-        "eslint-plugin-unicorn": "^42.0.0",
-        "jest": "27.5.1",
-        "nx": "14.4.2",
+        "eslint-plugin-sonarjs": "^0.18.0",
+        "eslint-plugin-unicorn": "^46.0.0",
+        "jest": "29.4.3",
+        "jest-environment-jsdom": "28.1.3",
+        "nx": "15.8.6",
         "prettier": "2.6.2",
         "sass": "^1.49.7",
-        "ts-jest": "27.1.4",
-        "typescript": "4.7.3"
+        "ts-jest": "29.0.5",
+        "typescript": "4.9.5"
     }
 }
