--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,21 +1,12 @@
 {
     "root": true,
-    "ignorePatterns": [
-        "**/*"
-    ],
-    "plugins": [
-        "@nrwl/nx"
-    ],
+    "ignorePatterns": ["**/*"],
+    "plugins": ["@nx"],
     "overrides": [
         {
-            "files": [
-                "*.ts",
-                "*.tsx",
-                "*.js",
-                "*.jsx"
-            ],
+            "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
             "rules": {
-                "@nrwl/nx/enforce-module-boundaries": [
+                "@nx/enforce-module-boundaries": [
                     "error",
                     {
                         "enforceBuildableLibDependency": true,
@@ -23,9 +14,7 @@
                         "depConstraints": [
                             {
                                 "sourceTag": "*",
-                                "onlyDependOnLibsWithTags": [
-                                    "*"
-                                ]
+                                "onlyDependOnLibsWithTags": ["*"]
                             }
                         ]
                     }
@@ -33,35 +22,22 @@
             }
         },
         {
-            "files": [
-                "*.ts",
-                "*.tsx"
-            ],
-            "extends": [
-                "plugin:@nrwl/nx/typescript",
-                "@ionaru"
-            ],
+            "files": ["*.ts", "*.tsx"],
+            "extends": ["plugin:@nx/typescript", "@ionaru"],
             "rules": {
                 "unicorn/no-null": "off",
                 "import/extensions": "off",
                 "import/no-unresolved": [
                     2,
                     {
-                        "ignore": [
-                            "rangers-site"
-                        ]
+                        "ignore": ["rangers-site"]
                     }
                 ]
             }
         },
         {
-            "files": [
-                "*.js",
-                "*.jsx"
-            ],
-            "extends": [
-                "plugin:@nrwl/nx/javascript"
-            ],
+            "files": ["*.js", "*.jsx"],
+            "extends": ["plugin:@nx/javascript"],
             "rules": {}
         }
     ]
