--- a/package.json
+++ b/package.json
@@ -73,14 +73,6 @@
     },
     "devDependencies": {
         "@ionaru/eslint-config": "^9.1.1",
-        "@nrwl/cli": "15.8.6",
-        "@nrwl/eslint-plugin-nx": "15.8.6",
-        "@nrwl/express": "15.8.6",
-        "@nrwl/jest": "15.8.6",
-        "@nrwl/linter": "15.8.6",
-        "@nrwl/node": "15.8.6",
-        "@nrwl/nx-cloud": "15.2.1",
-        "@nrwl/workspace": "15.8.6",
         "@types/cors": "^2.8.12",
         "@types/cron": "^2.0.0",
         "@types/debug": "^4.1.7",
@@ -94,8 +86,8 @@
         "@types/passport": "^1.0.7",
         "@types/passport-discord": "^0.1.5",
         "@types/uuid": "^8.3.4",
-        "@typescript-eslint/eslint-plugin": "^5.54.1",
-        "@typescript-eslint/parser": "^5.54.1",
+        "@typescript-eslint/eslint-plugin": "5.58.0",
+        "@typescript-eslint/parser": "5.58.0",
         "eslint": "^8.36.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-import": "^2.25.4",
@@ -106,10 +98,17 @@
         "eslint-plugin-unicorn": "^46.0.0",
         "jest": "29.4.3",
         "jest-environment-jsdom": "28.1.3",
-        "nx": "15.8.6",
+        "nx": "16.2.1",
         "prettier": "2.6.2",
         "sass": "^1.49.7",
-        "ts-jest": "29.0.5",
-        "typescript": "4.9.5"
+        "ts-jest": "29.1.0",
+        "typescript": "5.0.4",
+        "nx-cloud": "16.0.5",
+        "@nx/workspace": "16.2.1",
+        "@nx/linter": "16.2.1",
+        "@nx/eslint-plugin": "16.2.1",
+        "@nx/jest": "16.2.1",
+        "@nx/node": "16.2.1",
+        "@nx/express": "16.2.1"
     }
 }
