Add website dark mode

--- a/apps/api/project.json
+++ b/apps/api/project.json
@@ -21,7 +21,7 @@
             }
         },
         "build": {
-            "executor": "@nrwl/webpack:webpack",
+            "executor": "@nx/webpack:webpack",
             "outputs": ["{options.outputPath}"],
             "options": {
                 "generatePackageJson": true,
