--- a/package.json
+++ b/package.json
@@ -36,11 +36,12 @@
         "@ionaru/micro-web-service": "^5.0.0",
         "@ionaru/random-string": "4.0.0",
         "@ionaru/typeorm-utils": "^2.0.0",
+        "@nx/webpack": "^16.2.1",
         "ajv": "^8.10.0",
         "ajv-errors": "^3.0.0",
         "ajv-formats": "^2.1.1",
         "axios": "^0.27.2",
-        "bootstrap": "^5.2.0-beta1",
+        "bootstrap": "^5.3.0-alpha3",
         "chalk": "^5.0.0",
         "connect-typeorm": "1.1.4",
         "cors": "^2.8.5",
@@ -73,6 +74,12 @@
     },
     "devDependencies": {
         "@ionaru/eslint-config": "^9.1.1",
+        "@nx/eslint-plugin": "16.2.1",
+        "@nx/express": "16.2.1",
+        "@nx/jest": "16.2.1",
+        "@nx/linter": "16.2.1",
+        "@nx/node": "16.2.1",
+        "@nx/workspace": "16.2.1",
         "@types/cors": "^2.8.12",
         "@types/cron": "^2.0.0",
         "@types/debug": "^4.1.7",
@@ -99,16 +106,10 @@
         "jest": "29.4.3",
         "jest-environment-jsdom": "28.1.3",
         "nx": "16.2.1",
+        "nx-cloud": "16.0.5",
         "prettier": "2.6.2",
         "sass": "^1.49.7",
         "ts-jest": "29.1.0",
-        "typescript": "5.0.4",
-        "nx-cloud": "16.0.5",
-        "@nx/workspace": "16.2.1",
-        "@nx/linter": "16.2.1",
-        "@nx/eslint-plugin": "16.2.1",
-        "@nx/jest": "16.2.1",
-        "@nx/node": "16.2.1",
-        "@nx/express": "16.2.1"
+        "typescript": "5.0.4"
     }
 }
