--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -21,7 +21,7 @@ jobs:
                   node-version: '16'
 
             - name: Audit
-              run: npm audit --omit=dev
+              run: npm audit --omit dev --audit-level high
 
     test:
         needs: [audit]
