--- a/apps/api/project.json
+++ b/apps/api/project.json
@@ -40,7 +40,7 @@
             }
         },
         "serve": {
-            "executor": "@nx/node:node",
+            "executor": "@nx/js:node",
             "options": {
                 "buildTarget": "api:build",
                 "inspect": true
