--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
         "@ionaru/micro-web-service": "^5.0.0",
         "@ionaru/random-string": "4.0.0",
         "@ionaru/typeorm-utils": "^2.0.0",
-        "@nx/webpack": "^16.2.1",
+        "@nx/webpack": "16.10.0",
         "ajv": "^8.10.0",
         "ajv-errors": "^3.0.0",
         "ajv-formats": "^2.1.1",
@@ -74,12 +74,12 @@
     },
     "devDependencies": {
         "@ionaru/eslint-config": "^9.1.1",
-        "@nx/eslint-plugin": "16.2.1",
-        "@nx/express": "16.2.1",
-        "@nx/jest": "16.2.1",
-        "@nx/linter": "16.2.1",
-        "@nx/node": "16.2.1",
-        "@nx/workspace": "16.2.1",
+        "@nx/eslint-plugin": "16.10.0",
+        "@nx/express": "16.10.0",
+        "@nx/jest": "16.10.0",
+        "@nx/linter": "16.10.0",
+        "@nx/node": "16.10.0",
+        "@nx/workspace": "16.10.0",
         "@types/cors": "^2.8.12",
         "@types/cron": "^2.0.0",
         "@types/debug": "^4.1.7",
@@ -93,9 +93,9 @@
         "@types/passport": "^1.0.7",
         "@types/passport-discord": "^0.1.5",
         "@types/uuid": "^8.3.4",
-        "@typescript-eslint/eslint-plugin": "5.58.0",
-        "@typescript-eslint/parser": "5.58.0",
-        "eslint": "^8.36.0",
+        "@typescript-eslint/eslint-plugin": "5.60.1",
+        "@typescript-eslint/parser": "5.60.1",
+        "eslint": "8.46.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-import": "^2.25.4",
         "eslint-plugin-jest": "^27.2.1",
@@ -105,11 +105,11 @@
         "eslint-plugin-unicorn": "^46.0.0",
         "jest": "29.4.3",
         "jest-environment-jsdom": "28.1.3",
-        "nx": "16.2.1",
-        "nx-cloud": "16.0.5",
+        "nx": "16.10.0",
+        "nx-cloud": "16.5.2",
         "prettier": "2.6.2",
         "sass": "^1.49.7",
         "ts-jest": "29.1.0",
-        "typescript": "5.0.4"
+        "typescript": "5.1.6"
     }
 }
